--- a/hello.css
+++ b/hello.css
@@ -1,1 +1,32 @@
+tbl{
+    border-style: solid;
+    border-color: red;
+    border-width: 10px;
+    border-radius: 10px;
+    background-color: whitesmoke;
+  }
+  #total{
+    border-style: solid;
+    border-color: red;
+    border-width: 4px;
+    border-radius: 7px;
+  }
+  #tip{
+    border-style: solid;
+    border-color: red;
+    border-width: 4px;
+    border-radius: 7px;
+  }
+  #tax{
+    border-style: solid;
+    border-color: red;
+    border-width: 4px;
+    border-radius: 7px;
+  }
 
+  #grandtotal{
+    border-style: solid;
+    border-color: red;
+    border-width: 4px;
+    border-radius: 7px;
+  }
