--- a/hello.css
+++ b/hello.css
@@ -5,28 +5,36 @@ tbl{
     border-radius: 10px;
     background-color: whitesmoke;
   }
-  #total{
+  #Uno{
     border-style: solid;
     border-color: red;
     border-width: 4px;
     border-radius: 7px;
   }
-  #tip{
+  #Dos{
     border-style: solid;
     border-color: red;
     border-width: 4px;
     border-radius: 7px;
   }
-  #tax{
+  #Tres{
     border-style: solid;
     border-color: red;
     border-width: 4px;
     border-radius: 7px;
   }
 
-  #grandtotal{
+  #Quatro{
     border-style: solid;
     border-color: red;
     border-width: 4px;
     border-radius: 7px;
+
+  }
+    #Cinco{
+        border-style: solid;
+        border-color: red;
+        border-width: 4px;
+        border-radius: 7px;
+
   }
