--- a/hello.css
+++ b/hello.css
@@ -5,33 +5,33 @@ tbl{
     border-radius: 10px;
     background-color: whitesmoke;
   }
-  #Uno{
+  #uno{
     border-style: solid;
     border-color: red;
     border-width: 4px;
     border-radius: 7px;
   }
-  #Dos{
+  #dos{
     border-style: solid;
     border-color: red;
     border-width: 4px;
     border-radius: 7px;
   }
-  #Tres{
+  #tres{
     border-style: solid;
     border-color: red;
     border-width: 4px;
     border-radius: 7px;
   }
 
-  #Quatro{
+  #quatro{
     border-style: solid;
     border-color: red;
     border-width: 4px;
     border-radius: 7px;
 
   }
-  #Cinco{
+  #cinco{
         border-style: solid;
         border-color: red;
         border-width: 4px;
